--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,13 @@ body {
 }
 
 h1,
-p {
+p
+,a {
   margin: 1em auto;
   text-align: center;
 }
-h1{
-  font-size: x-large;
+h1 a{
+  font-size: xx-large;
   color: rgb(0, 0, 0);
   text-shadow: 0 0 20px rgb(255, 255, 255); 
 }
